--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -348,11 +348,10 @@ l'algorithme \texttt{Connection Scan Algorithm (CSA) basique}.
 	      %TODO: vérifier que ce truc est nécessaire à définir
 	\item Un mouvement $m1$ est plus rapide qu'un autre mouvement $m2$ si $m1$
 	      et $m2$ ont la même destination et $m1$ atteint celle-ci avant $m2$.
-	      % TODO: expliquer ce qu'est un Movement
 
-	\item Calcul du temps d'arrivé d'une chemin à pied : $f_{tArr} = f_{tDep} +
-		      f_{travelTime}$ où $f_{tDep}$ correspond au meilleur temps connu pour se
-	      rendre au point de départ de $f$, i.e. $f_{pDep}$.
+    \item Calcul du temps d'arrivé d'un chemin à pied : $f_{tArr} = f_{tDep} +
+        f_{travelTime}$ où $f_{tDep}$ correspond au meilleur temps connu pour
+        se rendre au point de départ de $f$, i.e. $f_{pDep}$.
 
 \end{itemize}
 
