--- a/res/refs.bib
+++ b/res/refs.bib
@@ -9,7 +9,7 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, and Dorothea Wagner
 https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
 
 @misc{ConnectionScanAlgorithmShort,
-    author = {Julian Dibbelt, Thomas Pajor, Ben Strasser, Dorothea Wagner},
+    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea Wagner},
     title = {Intriguingly Simple and Fast Transit Routing},
     howpublished = {\url{
                     https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
@@ -28,7 +28,7 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, Dorothea Wagner
 https://arxiv.org/abs/1703.05997
 
 @misc{ConnectionScanAlgorithmLong:2017,
-    author = {Julian Dibbelt, Thomas Pajor, Ben Strasser, Dorothea Wagner},
+    author = {Julian Dibbelt and Thomas Pajor and Ben Strasser and Dorothea Wagner},
     title = {Connection Scan Algorithm},
     year = {2017},
     eprint = {1703.05997},
@@ -75,7 +75,7 @@ https://dl.acm.org/doi/10.5555/2790174.2790186
 https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
 
 @misc{haversineFormula,
-    author = {Rezania Agramanisti Azdy, Febriyanti Darnis},
+    author = {Rezania Agramanisti Azdy and Febriyanti Darnis},
     title = {Use of Haversine Formula in Finding Distance Between Temporary
              Shelter and Waste End Processing Sites},
     note = {voir page~3},
